--- a/src/main/webapp/WEB-INF/pagination.jspf
+++ b/src/main/webapp/WEB-INF/pagination.jspf
@@ -1,6 +1,6 @@
 <c:if test="${totalPages gt 1}">
     <nav aria-label="..." class="position-relative">
-        <ul class="pagination d-flex flex-wrap justify-content-center custom-shadow" style="z-index: 1; position: relative;">
+        <ul class="pagination d-flex flex-wrap justify-content-center custom-shadow mb-3" style=" z-index: 1; position: relative;">
             <c:if test="${page gt 1}">
                 <li class="page-item">
                     <a class="page-link" href="
